--- a/notebooks/pytorch-boilerplate.ipynb
+++ b/notebooks/pytorch-boilerplate.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os   # miscellaneous os interfaces\n",
+    "import os  # miscellaneous os interfaces\n",
     "import sys  # configuring python runtime environment\n",
-    "import time # library for time manipulation, and logging"
+    "import time  # library for time manipulation, and logging"
    ]
   },
   {
@@ -42,9 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import deepcopy      # dataframe is mutable\n",
-    "from tqdm import tqdm     # progress bar for loops\n",
-    "from uuid import uuid4 as UUID # unique identifier for objs"
+    "from copy import deepcopy  # dataframe is mutable\n",
+    "from tqdm import tqdm  # progress bar for loops\n",
+    "from uuid import uuid4 as UUID  # unique identifier for objs"
    ]
   },
   {
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
    ]
   },
